# atlas-dictation

./: .gitignore  Cargo.toml  DEVLOG.md  DISCLAIMER.md  LICENSE  PORTING.md  README.md  RELEASE_NOTES.md  SESSION_HANDOFF.md  Start AIC Dictation.command  build-app.sh  build-dmg.sh  build-icon.sh  ship.sh
.github/workflows/: ci.yml
assets/: medical-dictionary.txt
packaging/: AppIcon.icns  Info.plist
src/: main.rs
